# agents-doodle

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.claude/skills/: tailwind-plus-classes-report.md
.claude/skills/tailwind-plus/: SKILL.md
.claude/skills/tailwind-plus/references/: data-calendars.md  data-description-lists.md  data-stats.md  docs-INDEX.md  docs-assets.md  docs-autocomplete.md  docs-command-palette.md  docs-copy-button.md  docs-dialog.md  docs-disclosure.md  docs-dropdown-menu.md  docs-elements.md  docs-popover.md  docs-select.md  docs-tabs.md  docs-using-react.md  ecom-cart-pages.md  ecom-carts.md  ecom-categories.md  ecom-category-pages.md  ecom-checkout-pages.md  ecom-checkout.md  ecom-detail-pages.md  ecom-features.md  ecom-filters.md  ecom-history-pages.md  ecom-incentives.md  ecom-navigation.md  ecom-order-history.md  ecom-order-summaries.md  ecom-product-lists.md  ecom-product-overviews.md  (+64 more)
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: agents.py  chat.py  skills.py
backend/app/services/: agent_service.py  chat_service.py  tool_registry.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: agents.ts  chat.ts  skills.ts
frontend/src/components/: AgentEditor.tsx  ApprovalDialog.tsx  ChatInput.tsx  ChatView.tsx  EditorChatPanel.tsx  MarkdownContent.tsx  MessageBubble.tsx  MessageList.tsx  Sidebar.tsx  SkillsPage.tsx
frontend/src/stores/: appStore.ts
(+10 files in other folders)
